[package]
name = "xcsv"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
thiserror = "1"
zip = { version = "0.6", default-features = false, features = ["deflate"] }
quick-xml = { version = "0.31", features = ["serialize"] }
csv = "1"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
tempfile = "3"
