[package]
name = "xcsv"
version = "0.1.3"
edition = "2024"
repository = "https://github.com/mikkurogue/xcsv"

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
thiserror = "1"
libxcsv = { version = "0.1.0", path = "libxcsv" }

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

