[package]
name = "libxcsv"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
thiserror = "1"
zip = { version = "0.6", default-features = false, features = ["deflate"] }
quick-xml = { version = "0.31.0", features = ["serialize"] }
csv = "1.3.1"
serde = { version = "1", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = "3"
assert_cmd = "2.0"
zip = { version = "0.6", default-features = false, features = ["deflate"] }


